--- a/miniProject4/BlazorCloud/BlazorCloud/Properties/launchSettings.json
+++ b/miniProject4/BlazorCloud/BlazorCloud/Properties/launchSettings.json
@@ -4,6 +4,7 @@
       "http": {
         "commandName": "Project",
         "dotnetRunMessages": true,
+        "externalUrlConfiguration": true,
         "launchBrowser": true,
         "applicationUrl": "http://localhost:5250",
         "environmentVariables": {
@@ -13,6 +14,7 @@
       "https": {
         "commandName": "Project",
         "dotnetRunMessages": true,
+        "externalUrlConfiguration": true,
         "launchBrowser": true,
         "applicationUrl": "https://localhost:7218;http://localhost:5250",
         "environmentVariables": {
