Complete Week 1: Docker setup tested and verified
Architect tasks completed:
- Created CHANGELOG.md documenting all changes
- Fixed database.js to exit on connection failure (containerized mode)
- Added comprehensive seed data (5 users, 10 patients, 10 sensors, 50 readings)
- Fixed SQL syntax error in schema (partial index not supported in MySQL)
- Fixed docker-compose volume mounts for init scripts
- Changed frontend port from 80 to 8080 (avoid port conflict)

Verified:
✓ All three containers start successfully
✓ Database schema created automatically
✓ Seed data loaded (5 users, 10 patients, 10 sensors, 50 sensor readings)
✓ Backend health endpoint responding
✓ Frontend serving React app via nginx
✓ All containers healthy

System ready for Week 2 implementation.

--- a/finalProjWeb/docker-compose.yml
+++ b/finalProjWeb/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - "3306:3306"
     volumes:
       - db-data:/var/lib/mysql
-      - ./implementation/backend/database/init:/docker-entrypoint-initdb.d:ro
-      - ./implementation/backend/database/seed:/docker-entrypoint-seed.d:ro
+      - ./implementation/backend/database/init/01-schema.sql:/docker-entrypoint-initdb.d/01-schema.sql:ro
+      - ./implementation/backend/database/seed/02-seed-data.sql:/docker-entrypoint-initdb.d/02-seed-data.sql:ro
     networks:
       - iot-network
     healthcheck:
@@ -65,7 +65,7 @@ services:
     container_name: iot-dashboard-frontend
     restart: unless-stopped
     ports:
-      - "80:80"
+      - "8080:80"
     depends_on:
       - backend
     networks:
