--- a/finalProjWeb/docker-compose.yml
+++ b/finalProjWeb/docker-compose.yml
@@ -62,6 +62,9 @@ services:
     build:
       context: ./implementation/frontend
       dockerfile: Dockerfile
+      args:
+        # Build-time argument: Frontend JS runs in browser, needs localhost
+        VITE_API_BASE_URL: http://localhost:3000/api/v1
     container_name: iot-dashboard-frontend
     restart: unless-stopped
     ports:
@@ -70,8 +73,6 @@ services:
       - backend
     networks:
       - iot-network
-    environment:
-      VITE_API_BASE_URL: http://backend:3000/api/v1
 
 networks:
   iot-network:
