Fix SSE real-time updates and patient API
- Fixed SSE authentication: use enabled: git add -utoken to prevent premature connections
- Fixed patient API: changed oxygen_level to blood_oxygen_level in SQL queries
- Fixed CORS issues: changed all API URLs from absolute to relative (/api/v1)
- Updated docker-compose.yml with correct VITE_API_BASE_URL build arg
- Fixed nginx SSE streaming: disabled buffering and compression for /api/v1/stream/
- Fixed Node.js response buffering: added flush() after every broadcast write
- SSE now delivers real-time sensor updates every 5 seconds as designed

--- a/finalProjWeb/docker-compose.yml
+++ b/finalProjWeb/docker-compose.yml
@@ -63,8 +63,8 @@ services:
       context: ./implementation/frontend
       dockerfile: Dockerfile
       args:
-        # Build-time argument: Frontend JS runs in browser, needs localhost
-        VITE_API_BASE_URL: http://localhost:3000/api/v1
+        # Use relative URL to work through nginx proxy (avoids CORS)
+        VITE_API_BASE_URL: /api/v1
     container_name: iot-dashboard-frontend
     restart: unless-stopped
     ports:
