--- a/finalProjWeb/implementation/frontend/Dockerfile
+++ b/finalProjWeb/implementation/frontend/Dockerfile
@@ -12,8 +12,9 @@ RUN npm ci
 # Copy source code
 COPY . .
 
-# Accept API URL as build argument (defaults to localhost for browser access)
-ARG VITE_API_BASE_URL=http://localhost:3000/api/v1
+# Use relative URL to work through nginx proxy
+# This avoids CORS issues and works in Docker
+ARG VITE_API_BASE_URL=/api/v1
 ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 
 # Build the application
