--- a/finalProjWeb/implementation/frontend/.env.example
+++ b/finalProjWeb/implementation/frontend/.env.example
@@ -1,2 +1,4 @@
 # Environment variables for frontend
-VITE_API_BASE_URL=http://localhost:3000/api/v1
+# Use relative URL to work through nginx proxy in Docker
+# For local Vite dev server, vite.config.ts proxies /api to backend
+VITE_API_BASE_URL=/api/v1
