--- a/finalProjWeb/implementation/frontend/nginx.conf
+++ b/finalProjWeb/implementation/frontend/nginx.conf
@@ -16,6 +16,43 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
+    # SSE endpoint - disable buffering
+    location /api/v1/stream/ {
+        proxy_pass http://backend:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection '';
+        
+        # CRITICAL: Disable ALL buffering for SSE
+        proxy_buffering off;
+        proxy_cache off;
+        proxy_request_buffering off;
+        
+        # Force immediate flush of response
+        proxy_no_cache 1;
+        proxy_cache_bypass 1;
+        
+        # CRITICAL: Disable compression for SSE (breaks streaming!)
+        gzip off;
+        
+        # Prevent caching of SSE streams
+        add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+        add_header Pragma "no-cache" always;
+        add_header Expires "0" always;
+        add_header X-Accel-Buffering "no" always;
+        
+        # Timeouts for SSE (24 hour connection)
+        proxy_read_timeout 86400s;
+        proxy_connect_timeout 75s;
+        proxy_send_timeout 86400s;
+        
+        # Don't close connection on client timeout
+        keepalive_timeout 3600s;
+    }
+
     # API proxy to backend
     location /api/ {
         proxy_pass http://backend:3000;
